--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for BitPress",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "server.js",
+    "test": "mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,12 @@
   "homepage": "https://github.com/sarL3y/bitpress-api#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.5.11"
+  },
+  "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "express": "^4.17.1",
-    "mocha": "^6.1.4",
-    "mongoose": "^5.5.11"
+    "mocha": "^6.1.4"
   }
 }
