--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "homepage": "https://github.com/sarL3y/bitpress-api#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.5.11"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "morgan": "^1.9.1"
   }
 }
